[package]
name = "bfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_particle_systems = "0.11.2"
bevy_simple_tilemap = "0.13.0"
rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3
